fix an issue where trying to select text results in moving content block fix add resource button color in dark mode

--- a/assets/styles/themes/authoring/torus/dark.scss
+++ b/assets/styles/themes/authoring/torus/dark.scss
@@ -197,7 +197,7 @@ html.authoring {
     }
   }
 
-  .toolbar.add-resource-content .insert-button-container .insert-button {
+  .resource-block-editor .toolbar.add-resource-content .insert-button-container .insert-button {
     background-color: $gray-800;
   }
 
